scss/partials/_topic_list.scss
$topic_box_width: 290;
$topic_box_height: 170;
$topic_box_padding: 10;

div.topic-list-edit-container {
  padding-bottom: 10px;
  margin-top: 92px;
}

div.topic-list{
  content: "";

  @include mobile(){
    background-color: #d9d9d9;
  }

  @include big_web(){
    background-color: #f1f1f1;
  }

  ul.topic-list-internal {
    list-style: none;
    padding: 0;

    @include big_web(){
      width: #{($topic_box_width * 3)}px;
      margin: 0 auto;
    }

    &.content-loaded:empty {

      text-align: center;
      font-size: 18px;
      padding-top: 100px;
      color: rgba(0, 0, 0, 0.4);
      font-family: $oc_main_font;
      height: 200px;

      &:after {
        content: "This category is empty. Add a topic below.";
      }
    }
  

    li.topic-row{

      @include mobile(){
        padding: 0px;
        margin: 0px;
        width: 100%;
      }

      @include big_web(){
        width: #{$topic_box_width}px;
        height: #{$topic_box_height}px;
        overflow: hidden;
        padding: #{$topic_box_padding}px;
        float: left;

        &.full-width {
          width: 100%;
          height: auto;

          div.topic {
            height: auto;
            color: black;

            &::before {
              @include triangle(top, white, 0.6em);
              position: relative;
              top: -51px;
              left: 50%;
            }

            @for $i from 0 through 2{
              &.li-#{$i}::before {
                left: #{($topic_box_width * $i) + ((($topic_box_width - ($topic_box_padding * 2)) / 2) - (20 * 2))}px;
              }
            }

            div.topic-expanded-body{
              padding-top: 0px;
              margin-top: 0px;
              padding-bottom: 20px;

              img {
                width: 100%;
              }
            }
          }
        }
      }



      &.floating-edit-topic-button {
        position: fixed;
        bottom: 0px;
        background-color: rgba(255, 255, 255, 0.4);
      }
    }
  }
}

