fix empty category message alignment and the readonly message

--- a/scss/partials/_topic_list.scss
+++ b/scss/partials/_topic_list.scss
@@ -37,7 +37,12 @@ div.topic-list{
       height: 200px;
 
       &:after {
+        width: 100%;
         content: "This category is empty. Add a topic below.";
+      }
+
+      &.read-only:after {
+        content: "This category is empty.";
       }
     }
   
